Implement UpdateListingDetailsHandlerImpl
